--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
     - 5.3
     - 5.4
     - 5.5
+    - hhvm
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
@@ -14,6 +15,6 @@ env:
     - WP_VERSION=3.8 WP_MULTISITE=1
 
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script: phpunit
