--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ insert_final_newline = true
 
 [*.php]
 trim_trailing_whitespace = true
-indent_style = tabs
+indent_style = tab
 indent_size = 4
 
 [*.md]
