--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
     - WP_VERSION=4.0 WP_MULTISITE=1
 
 before_script:
+    - composer install
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script: phpunit
