--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.7",
-        "apigen/apigen": "~4.1"
+        "phpunit/phpunit": "~4.7"
     }
 }
