--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,36 @@
 {
-    "name": "goblindegook/wp-cas-server",
-    "type": "wordpress-plugin",
-    "description": "Cassava is a Central Authentication Service provider as a WordPress plugin.",
-    "license": "GPL 2.0+",
-    "authors": [
-        {
-            "name": "Luis Rodrigues",
-            "email": "hello@goblindegook.net"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Cassava\\": "lib/"
-        }
-    },
-    "require": {
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.7"
+  "name": "goblindegook/wp-cas-server",
+  "type": "wordpress-plugin",
+  "description": "Cassava is a Central Authentication Service provider as a WordPress plugin.",
+  "license": "GPL 2.0+",
+  "authors": [
+    {
+      "name": "Luis Rodrigues",
+      "email": "hello@goblindegook.net"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Cassava\\": "lib/"
+    }
+  },
+  "require": {
+    "php": ">=5.3.2",
+    "nekojira/wp-requirements": "^1.4",
+    "xrstf/composer-php52": "1.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.7"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "xrstf\\Composer52\\Generator::onPostInstallCmd"
+    ],
+    "post-update-cmd": [
+      "xrstf\\Composer52\\Generator::onPostInstallCmd"
+    ],
+    "post-autoload-dump": [
+      "xrstf\\Composer52\\Generator::onPostInstallCmd"
+    ]
+  }
 }
