--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "xrstf/composer-php52": "1.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7"
+    "phpunit/phpunit": "4.8.23"
   },
   "scripts": {
     "post-install-cmd": [
