--- a/composer.json
+++ b/composer.json
@@ -15,22 +15,10 @@
     }
   },
   "require": {
-    "php": ">=5.3.2",
-    "nekojira/wp-requirements": "^1.4",
-    "xrstf/composer-php52": "1.*"
+    "php": ">=5.3.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.23"
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-update-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-autoload-dump": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ]
+    "phpunit/phpunit": "4.8.23",
+    "symfony/yaml": "~2.1"
   }
 }
