--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-compress": "^0.14.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-exec": "^0.4.6",
     "grunt-phpunit": "^0.3.6",
     "grunt-po2mo": "^0.1.2",
     "grunt-wp-deploy": "^1.0.3",
